--- a/assets/styles/reset.css
+++ b/assets/styles/reset.css
@@ -1,7 +1,9 @@
 /* minimal CSS reset */
 html {
     box-sizing: border-box;
-    font-size: 16px;
+    font-size: 100%;
+    margin: 0;
+    padding: 0;
   }
   
   *, *:before, *:after {
