won the fight with 4th item style

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -46,13 +46,12 @@ p {
 }
 .es-centered h2 {
   text-align: center;
-  font-size: clamp(1rem, 0.8039rem + 0.9804vw, 1.75rem);
-  padding: 0.5rem;
+  font-size: clamp(0.75rem, 0.462rem + 1.1438vw, 1.5rem);
   position: absolute;
-  width: 150px;
+  width: 10ch;
 }
 
-@media screen and (min-width: 560px) {
+@media screen and (min-width: 600px) {
   .es-centered h1 {
     background-color: unset;
     border: unset;
@@ -62,6 +61,9 @@ p {
   display: grid;
   grid-template-columns: 1fr 1fr;
   place-items: center;
+  align-content: start;
+  align-items: start;
+  justify-content: space-between;
 }
 
 @media screen and (min-width: 600px) {
@@ -69,12 +71,20 @@ p {
     grid-template-columns: repeat(4, 1fr);
   }
 }
+.es-grid-item {
+  align-content: start;
+  display: grid;
+  grid-template-rows: 1fr 60px;
+  align-content: start;
+  justify-content: center;
+  align-items: end;
+}
 .es-grid-item img {
   padding: 1rem;
 }
 
 .es-figcaption-red {
-  padding: 0.5rem;
+  padding: 0.7rem;
   text-align: center;
   font-family: cera_probold;
   letter-spacing: 0.13rem;
@@ -91,4 +101,15 @@ p {
 }
 .es-grid-container .es-grid-item:nth-child(3) {
   background: linear-gradient(90deg, #ff9550 50%, #ff7e06 50%);
+}
+.es-grid-container .es-grid-item:nth-child(4) {
+  align-self: center;
+  background-image: url(../img/04-compre.png);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: grid;
+  place-items: center;
+  height: 100%;
+  width: 100%;
 }/*# sourceMappingURL=styles.css.map */
