--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -106,21 +106,29 @@ $es-red: #da1a21;
   align-items: end;
     img {
       padding: 1rem;
+      width: 100%;
+  height: auto;
     }
     
 }
 
   // main styles
   
+  .es-main {
+    width: 100vw;
+    max-width: 1544px;
+  }
   .es-figcaption-red{
      padding: 0.7rem;
      text-align: center;
     font-family: cera_probold;
     letter-spacing: 0.13rem;
     width: 100%;
+    //height: 4rem;
      background-color: $es-red;
      color: white;
-   }
+     font-size: clamp(0.75rem, 0.5539rem + 0.9804vw, 1.5rem);
+  }
 
   .es-grid-container .es-grid-item {
     &:nth-child(1){
