--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -59,7 +59,7 @@ $es-sq-yellow1: #ffe542;
 $es-sq-yellow2: #ffd500;
 $es-sq-orange: #ff7300;
 $es-sq-purple1: #9759b0;
-$es-sq-purple2: #7836a2
+$es-sq-purple2: #7836a2;
 
 //utility classes
   
@@ -179,6 +179,3 @@ $es-sq-purple2: #7836a2
   }
 
   // decorative lines 
-  .es-divider {
-    
-  }
