--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -97,7 +97,7 @@ $es-sq-purple2: #7836a2;
 
 .es-grid-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(2, 1fr);
   place-items: center;
   align-content: start;
   align-items: start;
@@ -124,25 +124,49 @@ $es-sq-purple2: #7836a2;
   }
 }
 
-.es-grid-item_v2 {
-  outline: 2px solid yellow;
+
+.es-flex-container-col {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  outline: 1px solid blue;
+
 }
 
-.es-flex-container {
+.es-flex-container-row {
   display: flex;
-  flex-direction: row;
-  outline: 1px solid blue;
-  background-color: blue;
-  img {
-    display: inline-block;
+  flex-flow: row wrap;
+  align-items: flex-end;
+  justify-content: space-around;
+   align-content: flex-end;
+  // padding: 0.5rem;
+
+  outline: 1px solid purple;
+  figcaption img {
+    max-height: 1.5rem;
+  }
+  .es-flex-item {
+    flex: 1;
+    flex-basis: 21%;
+    display: flex;
+    flex-direction: column;
+    // justify-content: center;
+    align-items: center;
+    outline: 1px solid red;
+  }
+  .double {
+    flex: 2;
+    flex-basis: 42%;
   }
 }
 
 // main styles
 
 .es-main {
-  width: 100%;
+  // width: 100%;
   max-width: 1544px;
+  margin: auto;
 }
 .es-figcaption-red {
   padding: 0.7rem;
@@ -178,5 +202,28 @@ $es-sq-purple2: #7836a2;
     width: 100%;
   }
 }
+
+// #es-categories-age {
+
+//   figure:first-of-type {
+//     grid-column: 1 / 3;
+//   }
+//   figure:last-of-type {
+//     grid-column: 3 / 5;
+//   }
+//   } 
+
+// @media screen and (min-width: 600px) {
+//   #es-categories-age {
+
+// figure:first-of-type {
+//   grid-column: 1 / 3;
+// }
+// figure:last-of-type {
+//   grid-column: 3 / 5;
+// }
+// }   
+// }
+
 
 // decorative lines
