--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -65,10 +65,14 @@ $es-sq-purple1: #9759b0;
 $es-sq-purple2: #7836a2;
 
 //utility classes
+.margin {
+  margin: 16px;
+}
 
 .es-centered {
   display: grid;
   place-items: center;
+  
   // position: absolute;
   h1 {
     text-align: center;
@@ -102,21 +106,35 @@ $es-sq-purple2: #7836a2;
   align-content: start;
   align-items: start;
   justify-content: space-between;
+  gap: 16px;
 }
+
+.es-grid-first {
+  grid-column: 1 / 3;
+}
+
+
+
 
 @media screen and (min-width: 600px) {
   .es-grid-container {
     grid-template-columns: repeat(4, 1fr);
+    align-items: end;
   }
+  .es-grid-last {
+  grid-column: 3 / 5;
+}
 }
 
 .es-grid-item {
   align-content: start;
   display: grid;
+  width: 100%;
   grid-template-rows: 1fr 60px;
   align-content: start;
   justify-content: center;
   align-items: end;
+
   img {
     padding: 1rem;
     width: 100%;
@@ -128,38 +146,55 @@ $es-sq-purple2: #7836a2;
 .es-flex-container-col {
   display: flex;
   flex-direction: column;
+  width: 100%;
   align-items: center;
-  justify-content: center;
+  align-content: end;
+  justify-content: end;
   outline: 1px solid blue;
-
 }
 
 .es-flex-container-row {
-  display: flex;
-  flex-flow: row wrap;
-  align-items: flex-end;
-  justify-content: space-around;
-   align-content: flex-end;
-  // padding: 0.5rem;
-
-  outline: 1px solid purple;
-  figcaption img {
-    max-height: 1.5rem;
-  }
-  .es-flex-item {
-    flex: 1;
-    flex-basis: 21%;
-    display: flex;
-    flex-direction: column;
-    // justify-content: center;
-    align-items: center;
-    outline: 1px solid red;
-  }
-  .double {
-    flex: 2;
-    flex-basis: 42%;
-  }
+display: flex;
+flex-direction: row;
+width: 100%;
+align-items: center;
+justify-content: space-evenly;
+padding: 0.5rem;
+outline: 1px solid red;
+img {
+  max-height: 2rem;
 }
+}
+  
+
+
+
+// .es-flex-container-row {
+//   display: flex;
+//   flex-flow: row wrap;
+//   align-items: flex-end;
+//   justify-content: space-around;
+//    align-content: flex-end;
+//   // padding: 0.5rem;
+
+//   outline: 1px solid purple;
+//   figcaption img {
+//     max-height: 1.5rem;
+//   }
+//   .es-flex-item {
+//     flex: 1;
+//     flex-basis: 21%;
+//     display: flex;
+//     flex-direction: column;
+//     // justify-content: center;
+//     align-items: center;
+//     outline: 1px solid red;
+//   }
+//   .double {
+//     flex: 2;
+//     flex-basis: 42%;
+//   }
+// }
 
 // main styles
 
@@ -167,6 +202,12 @@ $es-sq-purple2: #7836a2;
   // width: 100%;
   max-width: 1544px;
   margin: auto;
+}
+
+.es-centered {
+  img {
+    width: 100%;
+  }
 }
 .es-figcaption-red {
   padding: 0.7rem;
@@ -194,7 +235,7 @@ $es-sq-purple2: #7836a2;
     align-self: center;
     background-image: url(../img/04-compre.png);
     background-position: center;
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     display: grid;
     place-items: center;
@@ -203,27 +244,7 @@ $es-sq-purple2: #7836a2;
   }
 }
 
-// #es-categories-age {
 
-//   figure:first-of-type {
-//     grid-column: 1 / 3;
-//   }
-//   figure:last-of-type {
-//     grid-column: 3 / 5;
-//   }
-//   } 
-
-// @media screen and (min-width: 600px) {
-//   #es-categories-age {
-
-// figure:first-of-type {
-//   grid-column: 1 / 3;
-// }
-// figure:last-of-type {
-//   grid-column: 3 / 5;
-// }
-// }   
-// }
 
 
 // decorative lines
