--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -190,4 +190,27 @@ figcaption {
 }
 #es-categories-age figure:nth-of-type(6) figcaption {
   background: linear-gradient(90deg, #000000 50%, #c7c1c0 50%);
+}
+
+.es-divider {
+  height: 40px;
+  margin-block: 50px;
+  background-position: right;
+}
+
+@media screen and (min-width: 600px) {
+  .es-divider {
+    background-size: contain;
+  }
+}
+.div-01 {
+  background-image: url(../img/divider-01-long.png);
+}
+
+.div-02 {
+  background-image: url(../img/divider-02-long.png);
+}
+
+.div-03 {
+  background-image: url(../img/divider-03-long.png);
 }/*# sourceMappingURL=styles.css.map */
