--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -259,6 +259,7 @@ img {
   height: 40px;
   margin-block: 50px;
   background-position: right;
+  background-size: cover;
 }
 
 @media screen and (min-width: 600px) {
