--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -196,6 +196,7 @@ figcaption {
   height: 40px;
   margin-block: 50px;
   background-position: right;
+  background-size: cover;
 }
 
 @media screen and (min-width: 600px) {
