--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -39,9 +39,7 @@ h3 {
   font-family: cera_probold, "Trebutchet MS", Arial, Helvetica, sans-serif;
 }
 
-h3 {
-  color: white;
-}
+
 
 p {
   font-family: cera_proregular, "Trebutchet MS", Arial, Helvetica, sans-serif;
@@ -155,8 +153,8 @@ figcaption {
   width: 100%;
   align-items: center;
   align-content: end;
-  justify-content: end;
-  
+  justify-content: space-evenly;
+  outline: 1px solid yellow;
 }
 
 .es-flex-container-row {
@@ -221,6 +219,9 @@ img {
 }
 
 #es-categories-age {
+  h3 {
+    color: white;
+  }
   figure:nth-of-type(1) {
     figcaption {
       background: linear-gradient(90deg, $es-blue-400 50%, $es-blue-200 50%);
@@ -253,6 +254,23 @@ img {
   }
 }
 
+#es-categories-theme {
+  .es-flex-container-row {
+    padding: 0;
+    height: 100%;
+    img {
+      max-height: unset;
+      width: 100%;
+      outline: 1px solid red;
+    }
+  }
+  .square {
+    width: 100%;
+    aspect-ratio : 1 / 1;
+    background-color: #006cb7;
+  }
+  
+}
 
 // decorative lines
 .es-divider {
