--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -143,6 +143,53 @@ $es-black-200: #c7c1c0;
   }
 }
 
+.es-grid-container-card {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 180px 1fr 1fr 2rem;
+  place-items: center;
+  //align-content: end;
+  //align-items: center;
+  //justify-items: center;
+  
+  outline: 1px solid green;
+  // &-head {
+  //   display: grid;
+  // }
+  &-head-L {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    display: grid;
+    place-items: center;
+    row-gap: 10px;
+    width: 100%;
+    height: 100%;
+    outline: 1px solid orange;
+  }
+  &-head-R {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+    outline: 1px solid blue;
+  }
+  &-body {
+    grid-row: 2/4;
+    grid-column: 1/3;
+    outline: 1px solid red;
+  }
+  &-footer {
+    grid-row: 4/5;
+    grid-column: 1/2;
+    align-self: start;
+    justify-self: start;
+    margin-left: 1rem;
+    outline: 2px solid yellow;
+  }
+}
+
 figcaption {
     height: 3rem;
   }
