--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -232,19 +232,53 @@ figcaption {
   background: linear-gradient(90deg, #000000 50%, #c7c1c0 50%);
 }
 
-#es-categories-theme .es-flex-container-row {
-  padding: 0;
-  height: 100%;
+#es-categories-theme .es-grid-container-card:nth-of-type(1) .es-grid-container-card-head-L {
+  background-color: #006fba;
 }
-#es-categories-theme .es-flex-container-row img {
-  max-height: unset;
-  width: 100%;
-  outline: 1px solid red;
+#es-categories-theme .es-grid-container-card:nth-of-type(1) .es-grid-container-card-head-R {
+  background-color: #f5bbd7;
 }
-#es-categories-theme .square {
-  width: 100%;
-  aspect-ratio: 1/1;
-  background-color: #006cb7;
+#es-categories-theme .es-grid-container-card:nth-of-type(2) .es-grid-container-card-head-L {
+  background-color: #d25d8b;
+}
+#es-categories-theme .es-grid-container-card:nth-of-type(2) .es-grid-container-card-head-R {
+  background-color: #4a2282;
+}
+#es-categories-theme .es-grid-container-card:nth-of-type(3) .es-grid-container-card-head-L {
+  background-color: #000000;
+}
+#es-categories-theme .es-grid-container-card:nth-of-type(3) .es-grid-container-card-head-R {
+  background-color: #d60008;
+}
+#es-categories-theme .es-grid-container-card:nth-of-type(4) .es-grid-container-card-head-L {
+  background-color: #ffffff;
+}
+#es-categories-theme .es-grid-container-card:nth-of-type(4) .es-grid-container-card-head-R {
+  background-color: #fff374;
+}
+#es-categories-theme .es-grid-container-card:nth-of-type(5) .es-grid-container-card-head-L {
+  background-color: #0c0e0c;
+}
+#es-categories-theme .es-grid-container-card:nth-of-type(5) .es-grid-container-card-head-R {
+  background-color: #f1f0f1;
+}
+#es-categories-theme .es-grid-container-card:nth-of-type(6) .es-grid-container-card-head-L {
+  background-color: #ffffff;
+}
+#es-categories-theme .es-grid-container-card:nth-of-type(6) .es-grid-container-card-head-R {
+  background-color: #01040b;
+}
+#es-categories-theme .es-grid-container-card:nth-of-type(7) .es-grid-container-card-head-L {
+  background-color: #ffd200;
+}
+#es-categories-theme .es-grid-container-card:nth-of-type(7) .es-grid-container-card-head-R {
+  background-color: #ffd200;
+}
+#es-categories-theme .es-grid-container-card:nth-of-type(8) .es-grid-container-card-head-L {
+  background-color: #19325a;
+}
+#es-categories-theme .es-grid-container-card:nth-of-type(8) .es-grid-container-card-head-R {
+  background-color: #fec011;
 }
 
 .es-divider {
