--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -105,7 +105,7 @@ p {
 .es-grid-container-card {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 180px 1fr 1fr 2rem;
+  grid-template-rows: 150px 1fr 1fr 2rem;
   place-items: center;
   outline: 1px solid green;
 }
@@ -114,10 +114,14 @@ p {
   grid-column: 1/2;
   display: grid;
   place-items: center;
-  row-gap: 10px;
+  padding-top: 10px;
   width: 100%;
   height: 100%;
   outline: 1px solid orange;
+}
+.es-grid-container-card-head-L img {
+  max-height: 70px;
+  max-width: 100px;
 }
 .es-grid-container-card-head-R {
   grid-row: 1/2;
@@ -127,6 +131,9 @@ p {
   display: grid;
   place-items: center;
   outline: 1px solid blue;
+}
+.es-grid-container-card-head-R img {
+  max-height: 100px;
 }
 .es-grid-container-card-body {
   grid-row: 2/4;
