--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -143,7 +143,7 @@ $es-black-200: #c7c1c0;
 .es-grid-container-card {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 180px 1fr 1fr 2rem;
+  grid-template-rows: 150px 1fr 1fr 2rem;
   place-items: center;
   //align-content: end;
   //align-items: center;
@@ -158,10 +158,14 @@ $es-black-200: #c7c1c0;
     grid-column: 1/2;
     display: grid;
     place-items: center;
-    row-gap: 10px;
+    padding-top: 10px;
     width: 100%;
     height: 100%;
     outline: 1px solid orange;
+    img {
+      max-height: 70px;
+      max-width: 100px;
+    }
   }
   &-head-R {
     grid-row: 1/2;
@@ -171,6 +175,9 @@ $es-black-200: #c7c1c0;
     display: grid;
     place-items: center;
     outline: 1px solid blue;
+    img {
+      max-height: 100px;
+    }
   }
   &-body {
     grid-row: 2/4;
@@ -321,6 +328,7 @@ figcaption {
 // }
 
 #es-categories-theme {
+
   .es-grid-container-card:nth-of-type(1) {
     .es-grid-container-card-head-L {
       background-color: #006fba;
