--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -105,8 +105,10 @@ p {
 .es-grid-container-card {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 150px 1fr 1fr 2rem;
-  place-items: center;
+  grid-template-rows: 1fr 2fr;
+  justify-items: center;
+  border-radius: 8px;
+  overflow: hidden;
   outline: 1px solid green;
 }
 .es-grid-container-card-head-L {
@@ -114,14 +116,14 @@ p {
   grid-column: 1/2;
   display: grid;
   place-items: center;
-  padding-top: 10px;
+  padding-block: 10px;
   width: 100%;
   height: 100%;
   outline: 1px solid orange;
 }
 .es-grid-container-card-head-L img {
-  max-height: 70px;
-  max-width: 100px;
+  max-height: 60px;
+  outline: 1px solid red;
 }
 .es-grid-container-card-head-R {
   grid-row: 1/2;
@@ -130,25 +132,31 @@ p {
   height: 100%;
   display: grid;
   place-items: center;
+  padding-block: 10px;
   outline: 1px solid blue;
 }
 .es-grid-container-card-head-R img {
-  max-height: 100px;
+  max-height: 60px;
 }
 .es-grid-container-card-body {
-  grid-row: 2/4;
+  grid-row: 2/3;
   grid-column: 1/3;
   outline: 1px solid red;
 }
 .es-grid-container-card-footer {
-  grid-row: 4/5;
+  grid-row: 2/3;
   grid-column: 1/2;
-  align-self: start;
+  align-self: end;
   justify-self: start;
   margin-left: 1rem;
   outline: 2px solid yellow;
 }
 
+@media screen and (min-width: 600px) {
+  .es-grid-container-card {
+    border-radius: unset;
+  }
+}
 figcaption {
   height: 3rem;
 }
