--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -143,8 +143,12 @@ $es-black-200: #c7c1c0;
 .es-grid-container-card {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 150px 1fr 1fr 2rem;
-  place-items: center;
+  grid-template-rows: 1fr 2fr;
+  // height: 300px;
+  justify-items: center;
+  //place-items: center;
+  border-radius: 8px;
+  overflow: hidden;
   //align-content: end;
   //align-items: center;
   //justify-items: center;
@@ -157,14 +161,17 @@ $es-black-200: #c7c1c0;
     grid-row: 1/2;
     grid-column: 1/2;
     display: grid;
+    //justify-items: center;
+    //align-items: start;
     place-items: center;
-    padding-top: 10px;
+    padding-block: 10px;
     width: 100%;
     height: 100%;
+    
     outline: 1px solid orange;
     img {
-      max-height: 70px;
-      max-width: 100px;
+      max-height: 60px;
+      outline: 1px solid red;
     }
   }
   &-head-R {
@@ -174,23 +181,30 @@ $es-black-200: #c7c1c0;
     height: 100%;
     display: grid;
     place-items: center;
+    padding-block: 10px;
     outline: 1px solid blue;
     img {
-      max-height: 100px;
+      max-height: 60px;
     }
   }
   &-body {
-    grid-row: 2/4;
+    grid-row: 2/3;
     grid-column: 1/3;
     outline: 1px solid red;
   }
   &-footer {
-    grid-row: 4/5;
+    grid-row: 2/3;
     grid-column: 1/2;
-    align-self: start;
+    align-self: end;
     justify-self: start;
     margin-left: 1rem;
     outline: 2px solid yellow;
+  }
+}
+
+@media screen and (min-width: 600px) {
+  .es-grid-container-card {
+    border-radius: unset;
   }
 }
 
@@ -309,23 +323,6 @@ figcaption {
   }
 }
 
-// #es-categories-theme {
-//   .es-flex-container-row {
-//     padding: 0;
-//     height: 100%;
-//     img {
-//       max-height: unset;
-//       width: 100%;
-//       outline: 1px solid red;
-//     }
-//   }
-//   .square {
-//     width: 100%;
-//     aspect-ratio : 1 / 1;
-//     background-color: #006cb7;
-//   }
-
-// }
 
 #es-categories-theme {
 
