--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -109,21 +109,21 @@ p {
   justify-items: center;
   border-radius: 8px;
   overflow: hidden;
-  outline: 1px solid green;
 }
 .es-grid-container-card-head-L {
   grid-row: 1/2;
   grid-column: 1/2;
   display: grid;
   place-items: center;
-  padding-block: 10px;
   width: 100%;
   height: 100%;
-  outline: 1px solid orange;
+  padding-inline: 5px;
 }
 .es-grid-container-card-head-L img {
-  max-height: 60px;
-  outline: 1px solid red;
+  height: max(60px, 70%);
+  width: auto;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .es-grid-container-card-head-R {
   grid-row: 1/2;
@@ -132,16 +132,16 @@ p {
   height: 100%;
   display: grid;
   place-items: center;
-  padding-block: 10px;
-  outline: 1px solid blue;
 }
 .es-grid-container-card-head-R img {
+  min-height: 40%;
   max-height: 60px;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .es-grid-container-card-body {
   grid-row: 2/3;
   grid-column: 1/3;
-  outline: 1px solid red;
 }
 .es-grid-container-card-footer {
   grid-row: 2/3;
@@ -149,12 +149,14 @@ p {
   align-self: end;
   justify-self: start;
   margin-left: 1rem;
-  outline: 2px solid yellow;
 }
 
 @media screen and (min-width: 600px) {
   .es-grid-container-card {
     border-radius: unset;
+  }
+  .es-grid-container-card-head-R img {
+    max-height: 100px;
   }
 }
 figcaption {
@@ -168,7 +170,6 @@ figcaption {
   align-items: center;
   align-content: end;
   justify-content: space-evenly;
-  outline: 1px solid yellow;
 }
 
 .es-flex-container-row {
@@ -298,7 +299,7 @@ figcaption {
 
 .es-divider {
   height: 40px;
-  margin-block: 50px;
+  margin-block: 40px;
   background-position: right;
   background-size: cover;
 }
@@ -318,8 +319,4 @@ figcaption {
 
 .div-03 {
   background-image: url(../img/divider-03-long.png);
-}
-
-figure {
-  outline: 2px solid red;
 }/*# sourceMappingURL=styles.css.map */
