--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -144,34 +144,22 @@ $es-black-200: #c7c1c0;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 1fr 2fr;
-  // height: 300px;
   justify-items: center;
-  //place-items: center;
   border-radius: 8px;
   overflow: hidden;
-  //align-content: end;
-  //align-items: center;
-  //justify-items: center;
 
-  outline: 1px solid green;
-  // &-head {
-  //   display: grid;
-  // }
   &-head-L {
     grid-row: 1/2;
     grid-column: 1/2;
     display: grid;
-    //justify-items: center;
-    //align-items: start;
     place-items: center;
-    padding-block: 10px;
     width: 100%;
     height: 100%;
-    
-    outline: 1px solid orange;
+    padding-inline: 5px;
     img {
-      max-height: 60px;
-      outline: 1px solid red;
+      height: max(min(60px), 70%);
+      width: auto;
+    object-fit: contain;
     }
   }
   &-head-R {
@@ -181,16 +169,15 @@ $es-black-200: #c7c1c0;
     height: 100%;
     display: grid;
     place-items: center;
-    padding-block: 10px;
-    outline: 1px solid blue;
     img {
-      max-height: 60px;
+    min-height: 40%;
+    max-height: 60px;
+    object-fit: contain;
     }
   }
   &-body {
     grid-row: 2/3;
     grid-column: 1/3;
-    outline: 1px solid red;
   }
   &-footer {
     grid-row: 2/3;
@@ -198,13 +185,17 @@ $es-black-200: #c7c1c0;
     align-self: end;
     justify-self: start;
     margin-left: 1rem;
-    outline: 2px solid yellow;
   }
 }
 
 @media screen and (min-width: 600px) {
   .es-grid-container-card {
     border-radius: unset;
+    &-head-R {
+      img {
+        max-height: 100px;
+      }
+    }
   }
 }
 
@@ -219,7 +210,6 @@ figcaption {
   align-items: center;
   align-content: end;
   justify-content: space-evenly;
-  outline: 1px solid yellow;
 }
 
 .es-flex-container-row {
@@ -396,7 +386,7 @@ figcaption {
 // decorative lines
 .es-divider {
   height: 40px;
-  margin-block: 50px;
+  margin-block: 40px;
   background-position: right;
   background-size: cover;
 }
@@ -418,6 +408,3 @@ figcaption {
   background-image: url(../img/divider-03-long.png);
 }
 
-figure {
-  outline: 2px solid red;
-}
