--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -147,7 +147,7 @@ $es-black-200: #c7c1c0;
   justify-items: center;
   border-radius: 8px;
   overflow: hidden;
-
+  
   &-head-L {
     grid-row: 1/2;
     grid-column: 1/2;
@@ -365,20 +365,18 @@ figcaption {
     }
   }
   .es-grid-container-card:nth-of-type(7) {
-    .es-grid-container-card-head {
+    position: relative;
+    .es-grid-container-card-head-L,
+    .es-grid-container-card-head-R {
       background-color: #ffd200;
-      grid-column: 1 / 3;
-      grid-row: 1/2;
-      display: grid;
-      place-items: center;
-      width: 100%;
-      height: 100%;
-      img {
-        //max-width: 90%;
-        //max-height: 50%;
-        outline: 2px solid blue;
-      }
+     img {
+      position: absolute;
+      left: 50%;
+      transform: translate(-50%, 0%);
+      max-width: 36%;
+     }
     }
+    
   }
   .es-grid-container-card:nth-of-type(8) {
     .es-grid-container-card-head-L {
