--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -159,8 +159,25 @@ p {
     max-height: 100px;
   }
 }
-figcaption {
-  height: 3rem;
+.es-grid-container-card-3x3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  aspect-ratio: 1/1;
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.es-grid-container-card-3x3 img {
+  position: absolute;
+  bottom: 0;
+  height: 78%;
+}
+.es-grid-container-card-3x3 figcaption {
+  grid-column: 1/4;
+  grid-row: 1/2;
+  place-self: center;
+  outline: 1px solid red;
 }
 
 .es-flex-container-col {
@@ -303,6 +320,33 @@ figcaption {
 }
 #es-categories-theme .es-grid-container-card:nth-of-type(8) .es-grid-container-card-head-R {
   background-color: #fec011;
+}
+
+#es-categories-other h3 {
+  color: white;
+  text-transform: none;
+}
+#es-categories-other .es-grid-container-card-3x3:nth-of-type(1) {
+  background-image: url(../img/animals-bg.png);
+  background-size: cover;
+}
+#es-categories-other .es-grid-container-card-3x3:nth-of-type(1) img {
+  right: 0;
+}
+#es-categories-other .es-grid-container-card-3x3:nth-of-type(2) {
+  background-image: url(../img/vehicles-bg.png);
+  background-size: cover;
+}
+#es-categories-other .es-grid-container-card-3x3:nth-of-type(2) img {
+  right: 0;
+}
+#es-categories-other .es-grid-container-card-3x3:nth-of-type(3) {
+  background-image: url(../img/gaming-bg.png);
+  background-size: cover;
+}
+#es-categories-other .es-grid-container-card-3x3:nth-of-type(4) {
+  background-image: url(../img/heroes-bg.png);
+  background-size: cover;
 }
 
 .es-divider {
