--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -199,9 +199,31 @@ $es-black-200: #c7c1c0;
   }
 }
 
-figcaption {
-  height: 3rem;
+.es-grid-container-card-3x3 {
+  display: grid;
+  
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  aspect-ratio: 1 / 1;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  img {
+    position: absolute;
+    bottom: 0;
+    height: 78%;
+  }
+  figcaption {
+    grid-column: 1 / 4;
+    grid-row: 1 / 2;
+    place-self: center;
+    outline: 1px solid red;
+  }
 }
+
+// figcaption {
+//   height: 3rem;
+// }
 
 .es-flex-container-col {
   display: flex;
@@ -382,6 +404,35 @@ figcaption {
     .es-grid-container-card-head-R {
       background-color: #fec011;
     }
+  }
+}
+
+#es-categories-other {
+  h3 {
+    color: white;
+    text-transform: none;
+  }
+  .es-grid-container-card-3x3:nth-of-type(1) {
+    background-image: url(../img/animals-bg.png);
+    background-size: cover;
+    img {
+      right: 0;
+    }
+  }
+  .es-grid-container-card-3x3:nth-of-type(2) {
+    background-image: url(../img/vehicles-bg.png);
+    background-size: cover;
+    img {
+      right: 0;
+    }
+  }
+  .es-grid-container-card-3x3:nth-of-type(3) {
+    background-image: url(../img/gaming-bg.png);
+    background-size: cover;
+  }
+  .es-grid-container-card-3x3:nth-of-type(4) {
+    background-image: url(../img/heroes-bg.png);
+    background-size: cover;
   }
 }
 
