--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -107,8 +107,6 @@ p {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 1fr 2fr;
   justify-items: center;
-  border-radius: 8px;
-  overflow: hidden;
 }
 .es-grid-container-card-head-L {
   grid-row: 1/2;
@@ -167,17 +165,24 @@ p {
   width: 100%;
   height: 100%;
   position: relative;
+  overflow: hidden;
+}
+.es-grid-container-card-3x3:hover img {
+  transform: scale(1.05);
 }
 .es-grid-container-card-3x3 img {
   position: absolute;
   bottom: 0;
   height: 78%;
+  scale: 100%;
+  transition: all 200ms ease-in;
 }
 .es-grid-container-card-3x3 figcaption {
   grid-column: 1/4;
   grid-row: 1/2;
   place-self: center;
   outline: 1px solid red;
+  font-size: clamp(0.875rem, 0.6789rem + 0.9804vw, 1.625rem);
 }
 
 .es-flex-container-col {
@@ -213,10 +218,13 @@ p {
 
 .es-figcaption-red {
   padding: 0.7rem;
+  display: grid;
+  place-items: center;
   text-align: center;
   font-family: cera_probold;
   letter-spacing: 0.13rem;
   width: 100%;
+  max-height: 3.7rem;
   background-color: #da1a21;
   color: white;
   font-size: clamp(0.75rem, 0.5539rem + 0.9804vw, 1.5rem);
@@ -245,6 +253,9 @@ p {
 
 #es-categories-age h3 {
   color: white;
+}
+#es-categories-age figcaption {
+  height: 3rem;
 }
 #es-categories-age figure:nth-of-type(1) figcaption {
   background: linear-gradient(90deg, #006cb7 50%, #96ceea 50%);
