--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -145,8 +145,6 @@ $es-black-200: #c7c1c0;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 1fr 2fr;
   justify-items: center;
-  border-radius: 8px;
-  overflow: hidden;
 
   &-head-L {
     grid-row: 1/2;
@@ -178,6 +176,7 @@ $es-black-200: #c7c1c0;
   &-body {
     grid-row: 2/3;
     grid-column: 1/3;
+    
   }
   &-footer {
     grid-row: 2/3;
@@ -201,24 +200,36 @@ $es-black-200: #c7c1c0;
 
 .es-grid-container-card-3x3 {
   display: grid;
-  
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, 1fr);
   aspect-ratio: 1 / 1;
   width: 100%;
   height: 100%;
   position: relative;
+  overflow: hidden;
+  &:hover {
+      img {
+        transform: scale(1.05);
+      }
+    }
+  
   img {
     position: absolute;
     bottom: 0;
     height: 78%;
+    scale: 100%;
+    transition: all 200ms ease-in;
   }
+  
   figcaption {
     grid-column: 1 / 4;
     grid-row: 1 / 2;
     place-self: center;
     outline: 1px solid red;
+    font-size: clamp(0.875rem, 0.6789rem + 0.9804vw, 1.625rem);
+    
   }
+  
 }
 
 // figcaption {
@@ -262,11 +273,13 @@ $es-black-200: #c7c1c0;
 }
 .es-figcaption-red {
   padding: 0.7rem;
+  display: grid;
+  place-items: center;
   text-align: center;
   font-family: cera_probold;
   letter-spacing: 0.13rem;
   width: 100%;
-  //height: 4rem;
+  max-height: 3.7rem;
   background-color: $es-red;
   color: white;
   font-size: clamp(0.75rem, 0.5539rem + 0.9804vw, 1.5rem);
@@ -298,6 +311,9 @@ $es-black-200: #c7c1c0;
 #es-categories-age {
   h3 {
     color: white;
+  }
+  figcaption {
+    height: 3rem;
   }
   figure:nth-of-type(1) {
     figcaption {
