--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -39,7 +39,7 @@ h3 {
   font-family: cera_probold, "Trebutchet MS", Arial, Helvetica, sans-serif;
 }
 
-p {
+li, p {
   font-family: cera_proregular, "Trebutchet MS", Arial, Helvetica, sans-serif;
 }
 
@@ -80,7 +80,7 @@ $es-black-200: #c7c1c0;
     font-size: clamp(1rem, 0.8039rem + 0.9804vw, 1.75rem);
     background-color: white;
     padding: 0.5rem;
-    border: 2px solid black;
+    border: 3px solid black;
     position: absolute;
   }
   h2 {
@@ -128,11 +128,11 @@ $es-black-200: #c7c1c0;
   align-content: start;
   display: grid;
   width: 100%;
-  grid-template-rows: 1fr 60px;
+  height: 100%;
+  grid-template-rows: 1fr 3rem;
   align-content: start;
-  justify-content: center;
+  //justify-content: center;
   align-items: end;
-
   img {
     padding: 1rem;
     width: 100%;
@@ -176,7 +176,6 @@ $es-black-200: #c7c1c0;
   &-body {
     grid-row: 2/3;
     grid-column: 1/3;
-    
   }
   &-footer {
     grid-row: 2/3;
@@ -208,11 +207,11 @@ $es-black-200: #c7c1c0;
   position: relative;
   overflow: hidden;
   &:hover {
-      img {
-        transform: scale(1.05);
-      }
+    img {
+      transform: scale(1.05);
     }
-  
+  }
+
   img {
     position: absolute;
     bottom: 0;
@@ -220,16 +219,13 @@ $es-black-200: #c7c1c0;
     scale: 100%;
     transition: all 200ms ease-in;
   }
-  
+
   figcaption {
     grid-column: 1 / 4;
     grid-row: 1 / 2;
     place-self: center;
-    outline: 1px solid red;
     font-size: clamp(0.875rem, 0.6789rem + 0.9804vw, 1.625rem);
-    
   }
-  
 }
 
 // figcaption {
@@ -273,8 +269,7 @@ $es-black-200: #c7c1c0;
 }
 .es-figcaption-red {
   padding: 0.7rem;
-  display: grid;
-  place-items: center;
+  
   text-align: center;
   font-family: cera_probold;
   letter-spacing: 0.13rem;
@@ -475,4 +470,64 @@ $es-black-200: #c7c1c0;
 }
 .div-03 {
   background-image: url(../img/divider-03-long.png);
+}
+
+// footer
+
+#es-footer {
+  background-image: url(../img/footer-shapes\ -\ mobile.png);
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat;
+  padding-block: 2.5rem;
+  .es-centered {
+    display: grid;
+    place-items: center;
+    max-width: 80%;
+    margin: auto;
+    padding: 1rem;
+    background-color: white;
+    border: 3px solid black;
+    h3 {
+     text-align: center; 
+     font-size: clamp(1.625rem, 1.2655rem + 1.7974vw, 3rem);
+     width: 14ch;
+     margin-bottom: 1rem;
+    }
+    ul {
+      font-size: 16px;
+      text-align: center;
+      //margin: 1rem;
+      & li:nth-last-of-type(2) {
+        margin-top: 1rem;
+      }
+      li {
+        margin-block: 2px;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 600px) {
+  #es-footer {
+    background-image: url(../img/footer-shapes.png);
+    background-size: contain;
+    .es-centered {
+      max-width: 90%;
+      h3 {
+      width: unset;
+    }
+    }
+    
+    ul {
+      
+      columns: 4 auto;
+      gap: 2.5rem;
+      
+      li {
+        text-align: left;
+      }
+    }
+  }
+
 }
