add id es-LEGO and put all styles inside of it

--- a/assets/styles/styles.scss
+++ b/assets/styles/styles.scss
@@ -1,3 +1,38 @@
+#es-LEGO {
+
+// css reset
+html {
+  box-sizing: border-box;
+  font-size: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  margin: 0;
+}
+
+figure, figcaption {
+  box-sizing: border-box;
+  margin: 0;
+}
+
 //typography
 //LEGO fonts upload
 @font-face {
@@ -530,4 +565,5 @@ $es-black-200: #c7c1c0;
     }
   }
 
+}
 }
